@@ -1,5 +1,8 @@
 2010-03-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* testsuite/TestMLPSolver.cpp: Adding an example about reachability and test non-ground module atom.
+	* examples/module-Reachability.hex: Likewise.
+
 	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing predicate arity and user_pred_tuple.
 
 	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing module atom.
